# movie-categorization

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/: README.md  main.py
src/model/: linear_model.py  model.py  multilable.py  predict.py  predict_sklearn.py  process_data.py  train.py
src/preprocessing/: genre_mapping.json  preprocess.py  requirements.txt
tests/: README.md
