[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Movie Categorization Model"
version = "0.1.0"
requires-python = ">=3.10"
package-mode = false
description = "A model that can read in the synopsis/summary of a movie and tag genres to it"
authors = [
    {name = "Eric Liu", email = "ericliu108@gmail.com"}
]
dependencies = [
	"python>=3.10.0",
	"kagglehub>=0.3.4",
	"numpy>=2.1.3",
	"torch=2.0.0"
]

[tool.poetry]
name = "Movie Categorization Model"
version = "0.1.0"
package-mode = false
description = "A model that can read in the synopsis/summary of a movie and tag genres to it"
authors = [
    "Eric Liu <ericliu108@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10.0"
kagglehub = "^0.3.4"
numpy = "^2.1.3"
torch = "2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[tool.pylint]
output-format = "colorized"
disable = [
    "C0114",  # Disables missing module docstring
    "C0115",  # Disables missing class docstring
    "C0116",  # Disables missing function docstring
]
